# CREST

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh
scripts/: build-linux.sh  run-linux.sh
src/: handler.c  index.html  main.c  style.css
src/data/: users.json
src/handlers/: handler.c  userHandler.c
src/include/: userHandler.h  utils.h
src/utils/: file.c  response.c  utils.c
